--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/speed-insights": "^1.0.7",
     "firebase": "^10.7.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
